# Object-Detection-from-Traffic-Video-Feed

./: Makefile  README.md  create_idd_dataset.py  main.py  pyproject.toml  pyproject.toml.black.isort  requirements.txt
models/training/: yolov8_train.py
models/training/runs/detect/train/: args.yaml  results.csv
modified_files/: dataclasses.py  line_counter.py
test/results/video1_results/run1/: OD_matrix.csv
test/results/video1_results/run1/tracks/: 1.csv  11.csv  13.csv  14.csv  17.csv  18.csv  2.csv  20.csv  24.csv  25.csv  3.csv  30.csv  32.csv  34.csv  35.csv  36.csv  38.csv  4.csv  40.csv  44.csv  45.csv  48.csv  49.csv  5.csv  51.csv  52.csv  53.csv  54.csv  55.csv  56.csv  57.csv  58.csv  59.csv  6.csv  61.csv  63.csv  64.csv  65.csv  69.csv  7.csv  (+6 more)
tests/: test_config_and_results.py
traffic_od/: __init__.py  config.py  detector.py  logging_utils.py  pipeline.py  results.py  tracker.py
utils/: detections2boxes.py  get_inputs.py  get_tracks.py  image_transform.py  match_detections_with_tracks.py  tracks2boxes.py  xml2yolo.py
