[tool.poetry]
name = "object-detection-from-traffic-video-feed"
version = "0.1.0"
description = "Vehicle detection, tracking, and OD estimation using YOLOv8 and ByteTrack on the Indian Driving Dataset."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.3"
pandas = "^1.5.3"
matplotlib = "^3.5.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
ultralytics = "^8.0.109"
scikit-learn = "^1.0.2"
opencv-python = "^4.7.0.72"
seaborn = "^0.11.2"
loguru = "^0.7.0"
filterpy = "^1.4.5"
cython-bbox = "^0.1.3"
Fiona = "^1.9.1"
geopandas = "^0.12.2"
shapely = "^2.0.1"
requests = "^2.29.0"
pyyaml = "^6.0"
supervision = "^0.16.0"
yolox = "^0.3.0"
onemetric = "^0.1.2"
# Add other essential dependencies as needed

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
